[package]
name = "chapter14"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arts = {path = "../arts"}

# Customizing Builds with Release Profiles
# setting controls the number of optimizations 0 ~ 3
[profile.dev]
opt-level = 1
[profile.release]
opt-level = 3
